--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^11.3.2"
   },
   "devDependencies": {
+    "@types/node": "^10.3.4",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
