--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,23 @@
 {
     "compilerOptions": {
         "target": "es2015",
-        "module": "commonjs"
-    }
+        "module": "commonjs",
+        "strict": true,
+        "esModuleInterop": true,
+        "sourceMap": true,
+        "outDir": "dist",
+        "removeComments": true,
+        "alwaysStrict": true,
+        "baseUrl": "src",
+        "declaration": true,
+        "forceConsistentCasingInFileNames": true,
+        "pretty": true
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
